overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,10 @@ body{
   /* background-color: aquamarine; */
   /* color: white; */
  /* background-color: white; */
- position: fixed;
+ /* position: fixed;
  width: 100%;
  top: 0px;
- overflow: hidden;
+ overflow: hidden; */
   display: grid;
   grid-template-columns: repeat(2,1fr)
 }
@@ -209,6 +209,16 @@ body{
   margin: 0 auto;
   width: 80%;
 }
+.About-Writeup-Container p{
+  /* background-color: white; */
+  line-height: 22px;
+  text-align: justify;
+}
+.About-display-img{
+  width: 600px;
+  height: 350px;
+
+}
 .Team-Card-Container{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -327,6 +337,11 @@ starts here.........*/
     padding-top: 90px;
     margin: 0 auto;
     width: 90%;
+  }
+  .About-display-img{
+    width: 300px;
+    height: 350px;
+  
   }
   .Team-Card-Container{
     display: grid;
